...
        <TouchableOpacity
          style={[
            styles.subcontainer,
            { borderBottomWidth: showingPicker ? 0 : 0.1 }
          ]}
          onPress={() => this.setState({ showingPicker: !showingPicker })}
          testID="picker_button_ios"
        >
          <Text style={{ marginLeft: 30 }}>Fruit</Text>
          {/* <Entypo name="select-arrows" color="#000000" size={18} /> */}
          <Text style={{ marginRight: 30 }} testID="chosen_item_text">
            {selectedValue || "Choose one"}
          </Text>
        </TouchableOpacity>
        {showingPicker && (
          <Picker
            style={styles.picker}
...
