...
  render() {
    return (
      <KeyboardAvoidingView
        style={styles.container}
        behavior="padding"
        enabled
        testID="login_screen"
      >
        <View style={styles.subcontainer}>
          <View style={styles.titleView}>
            <Text h1 testID="title">
              ReactApp
            </Text>
...
              onChangeText={() => {}}
              secureTextEntry
              testID="password_field"
            />
          </View>
          <Button
            testID="login_button"
            title="Login"
            buttonStyle={styles.buttonStyle}
            onPress={this.login}
            icon={{ name: "input", color: "#ffffff" }}
          />
        </View>
...
